fix: improve script consistancy and format (#100)